src/main/java/de/tudortmund/cs/iltis/logiclib/io/parser/modal/formula/pattern/PatternParser.java
// Generated from
// ../src/main/java/de/tudortmund/cs/iltis/logiclib/io/parser/modal/formula/pattern/PatternParser.g4
// by ANTLR 4.4
package de.tudortmund.cs.iltis.logiclib.io.parser.modal.formula.pattern;

import de.tudortmund.cs.iltis.utils.io.parser.general.AbstractParser;
import java.util.ArrayList;
import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PatternParser extends AbstractParser {
    static {
        RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int COMPLEMENT = 1,
            NOFORMULA = 2,
            ANYFORMULA = 3,
            READ = 4,
            PLUS = 5,
            STAR = 6,
            AT = 7,
            SQUOTE = 8,
            NEG = 9,
            AND = 10,
            OR = 11,
            EQUIV = 12,
            IMPLIES = 13,
            BOX = 14,
            DIAMOND = 15,
            TRUE = 16,
            FALSE = 17,
            OBRACKET = 18,
            CBRACKET = 19,
            OPAREN = 20,
            CPAREN = 21,
            ISYMBOL = 22,
            OBRACE = 23,
            CBRACE = 24,
            REVERSE_IMPLIES = 25,
            WS = 26,
            OPERATOR_OR_ISYMBOL = 27,
            MULTI = 28,
            CONTAINS = 29,
            DISTINCT = 30;
    public static final String[] tokenNames = {
        "<INVALID>",
        "COMPLEMENT",
        "NOFORMULA",
        "ANYFORMULA",
        "READ",
        "PLUS",
        "STAR",
        "AT",
        "SQUOTE",
        "NEG",
        "AND",
        "OR",
        "EQUIV",
        "IMPLIES",
        "BOX",
        "DIAMOND",
        "TRUE",
        "FALSE",
        "OBRACKET",
        "CBRACKET",
        "OPAREN",
        "CPAREN",
        "ISYMBOL",
        "OBRACE",
        "CBRACE",
        "REVERSE_IMPLIES",
        "WS",
        "OPERATOR_OR_ISYMBOL",
        "MULTI",
        "CONTAINS",
        "DISTINCT"
    };
    public static final int RULE_initFormula = 0,
            RULE_formula = 1,
            RULE_superformula = 2,
            RULE_subformulaOrS = 3,
            RULE_subformula = 4,
            RULE_subformulae = 5,
            RULE_atomarSubformula = 6,
            RULE_namedFormula = 7,
            RULE_namedSubformula = 8,
            RULE_subformulaWithName = 9,
            RULE_prefixSubformula = 10,
            RULE_iSymbol = 11,
            RULE_name = 12;
    public static final String[] ruleNames = {
        "initFormula",
        "formula",
        "superformula",
        "subformulaOrS",
        "subformula",
        "subformulae",
        "atomarSubformula",
        "namedFormula",
        "namedSubformula",
        "subformulaWithName",
        "prefixSubformula",
        "iSymbol",
        "name"
    };

    @Override
    public String getGrammarFileName() {
        return "PatternParser.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public PatternParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class InitFormulaContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(PatternParser.EOF, 0);
        }

        public FormulaContext formula() {
            return getRuleContext(FormulaContext.class, 0);
        }

        public InitFormulaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_initFormula;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitInitFormula(this);
            else return visitor.visitChildren(this);
        }
    }

    public final InitFormulaContext initFormula() throws RecognitionException {
        InitFormulaContext _localctx = new InitFormulaContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_initFormula);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(26);
                formula();
                setState(27);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FormulaContext extends ParserRuleContext {
        public SubformulaContext subformula() {
            return getRuleContext(SubformulaContext.class, 0);
        }

        public SuperformulaContext superformula() {
            return getRuleContext(SuperformulaContext.class, 0);
        }

        public FormulaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_formula;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitFormula(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FormulaContext formula() throws RecognitionException {
        FormulaContext _localctx = new FormulaContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_formula);
        try {
            setState(31);
            switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(29);
                        superformula();
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(30);
                        subformula();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SuperformulaContext extends ParserRuleContext {
        public SuperformulaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_superformula;
        }

        public SuperformulaContext() {}

        public void copyFrom(SuperformulaContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class OrLeadingNoFormulaContext extends SuperformulaContext {
        public SubformulaOrSContext firsts;
        public SubformulaOrSContext subformulaOrS;
        public List<SubformulaOrSContext> furthers = new ArrayList<SubformulaOrSContext>();

        public List<SubformulaOrSContext> subformulaOrS() {
            return getRuleContexts(SubformulaOrSContext.class);
        }

        public List<TerminalNode> OR() {
            return getTokens(PatternParser.OR);
        }

        public TerminalNode NOFORMULA(int i) {
            return getToken(PatternParser.NOFORMULA, i);
        }

        public TerminalNode OR(int i) {
            return getToken(PatternParser.OR, i);
        }

        public SubformulaOrSContext subformulaOrS(int i) {
            return getRuleContext(SubformulaOrSContext.class, i);
        }

        public List<TerminalNode> NOFORMULA() {
            return getTokens(PatternParser.NOFORMULA);
        }

        public OrLeadingNoFormulaContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitOrLeadingNoFormula(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AlternativeContext extends SuperformulaContext {
        public SubformulaContext first;
        public SubformulaContext subformula;
        public List<SubformulaContext> further = new ArrayList<SubformulaContext>();

        public List<SubformulaContext> subformula() {
            return getRuleContexts(SubformulaContext.class);
        }

        public SubformulaContext subformula(int i) {
            return getRuleContext(SubformulaContext.class, i);
        }

        public List<TerminalNode> PLUS() {
            return getTokens(PatternParser.PLUS);
        }

        public TerminalNode PLUS(int i) {
            return getToken(PatternParser.PLUS, i);
        }

        public AlternativeContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitAlternative(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AndLeadingNoFormulaContext extends SuperformulaContext {
        public SubformulaOrSContext firsts;
        public SubformulaOrSContext subformulaOrS;
        public List<SubformulaOrSContext> furthers = new ArrayList<SubformulaOrSContext>();

        public List<SubformulaOrSContext> subformulaOrS() {
            return getRuleContexts(SubformulaOrSContext.class);
        }

        public TerminalNode AND(int i) {
            return getToken(PatternParser.AND, i);
        }

        public List<TerminalNode> AND() {
            return getTokens(PatternParser.AND);
        }

        public TerminalNode NOFORMULA(int i) {
            return getToken(PatternParser.NOFORMULA, i);
        }

        public SubformulaOrSContext subformulaOrS(int i) {
            return getRuleContext(SubformulaOrSContext.class, i);
        }

        public List<TerminalNode> NOFORMULA() {
            return getTokens(PatternParser.NOFORMULA);
        }

        public AndLeadingNoFormulaContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitAndLeadingNoFormula(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class OrLeadingSubformulaContext extends SuperformulaContext {
        public SubformulaOrSContext firsts;
        public SubformulaOrSContext subformulaOrS;
        public List<SubformulaOrSContext> furthers = new ArrayList<SubformulaOrSContext>();

        public List<SubformulaOrSContext> subformulaOrS() {
            return getRuleContexts(SubformulaOrSContext.class);
        }

        public List<TerminalNode> OR() {
            return getTokens(PatternParser.OR);
        }

        public TerminalNode NOFORMULA(int i) {
            return getToken(PatternParser.NOFORMULA, i);
        }

        public TerminalNode OR(int i) {
            return getToken(PatternParser.OR, i);
        }

        public SubformulaOrSContext subformulaOrS(int i) {
            return getRuleContext(SubformulaOrSContext.class, i);
        }

        public List<TerminalNode> NOFORMULA() {
            return getTokens(PatternParser.NOFORMULA);
        }

        public OrLeadingSubformulaContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitOrLeadingSubformula(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ImpliesContext extends SuperformulaContext {
        public SubformulaContext first;
        public SubformulaContext second;

        public List<SubformulaContext> subformula() {
            return getRuleContexts(SubformulaContext.class);
        }

        public SubformulaContext subformula(int i) {
            return getRuleContext(SubformulaContext.class, i);
        }

        public TerminalNode IMPLIES() {
            return getToken(PatternParser.IMPLIES, 0);
        }

        public ImpliesContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitImplies(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class EquivContext extends SuperformulaContext {
        public SubformulaContext first;
        public SubformulaContext second;

        public TerminalNode EQUIV() {
            return getToken(PatternParser.EQUIV, 0);
        }

        public List<SubformulaContext> subformula() {
            return getRuleContexts(SubformulaContext.class);
        }

        public SubformulaContext subformula(int i) {
            return getRuleContext(SubformulaContext.class, i);
        }

        public EquivContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitEquiv(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AndLeadingSubformulaContext extends SuperformulaContext {
        public SubformulaOrSContext firsts;
        public SubformulaOrSContext subformulaOrS;
        public List<SubformulaOrSContext> furthers = new ArrayList<SubformulaOrSContext>();

        public List<SubformulaOrSContext> subformulaOrS() {
            return getRuleContexts(SubformulaOrSContext.class);
        }

        public TerminalNode AND(int i) {
            return getToken(PatternParser.AND, i);
        }

        public List<TerminalNode> AND() {
            return getTokens(PatternParser.AND);
        }

        public TerminalNode NOFORMULA(int i) {
            return getToken(PatternParser.NOFORMULA, i);
        }

        public SubformulaOrSContext subformulaOrS(int i) {
            return getRuleContext(SubformulaOrSContext.class, i);
        }

        public List<TerminalNode> NOFORMULA() {
            return getTokens(PatternParser.NOFORMULA);
        }

        public AndLeadingSubformulaContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor)
                        .visitAndLeadingSubformula(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class MultiConstraintContext extends SuperformulaContext {
        public SubformulaContext first;
        public SubformulaContext subformula;
        public List<SubformulaContext> further = new ArrayList<SubformulaContext>();

        public List<TerminalNode> MULTI() {
            return getTokens(PatternParser.MULTI);
        }

        public List<SubformulaContext> subformula() {
            return getRuleContexts(SubformulaContext.class);
        }

        public SubformulaContext subformula(int i) {
            return getRuleContext(SubformulaContext.class, i);
        }

        public TerminalNode MULTI(int i) {
            return getToken(PatternParser.MULTI, i);
        }

        public MultiConstraintContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitMultiConstraint(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SuperformulaContext superformula() throws RecognitionException {
        SuperformulaContext _localctx = new SuperformulaContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_superformula);
        int _la;
        try {
            setState(109);
            switch (getInterpreter().adaptivePredict(_input, 13, _ctx)) {
                case 1:
                    _localctx = new AlternativeContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(33);
                        ((AlternativeContext) _localctx).first = subformula();
                        setState(36);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(34);
                                    match(PLUS);
                                    setState(35);
                                    ((AlternativeContext) _localctx).subformula = subformula();
                                    ((AlternativeContext) _localctx)
                                            .further.add(
                                                    ((AlternativeContext) _localctx).subformula);
                                }
                            }
                            setState(38);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == PLUS);
                    }
                    break;
                case 2:
                    _localctx = new MultiConstraintContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(40);
                        ((MultiConstraintContext) _localctx).first = subformula();
                        setState(43);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(41);
                                    match(MULTI);
                                    setState(42);
                                    ((MultiConstraintContext) _localctx).subformula = subformula();
                                    ((MultiConstraintContext) _localctx)
                                            .further.add(
                                                    ((MultiConstraintContext) _localctx)
                                                            .subformula);
                                }
                            }
                            setState(45);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == MULTI);
                    }
                    break;
                case 3:
                    _localctx = new AndLeadingSubformulaContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(47);
                        ((AndLeadingSubformulaContext) _localctx).firsts = subformulaOrS();
                        setState(53);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(48);
                                    match(AND);
                                    setState(51);
                                    switch (_input.LA(1)) {
                                        case COMPLEMENT:
                                        case ANYFORMULA:
                                        case READ:
                                        case STAR:
                                        case SQUOTE:
                                        case NEG:
                                        case BOX:
                                        case DIAMOND:
                                        case TRUE:
                                        case FALSE:
                                        case OBRACKET:
                                        case OPAREN:
                                        case ISYMBOL:
                                        case CONTAINS:
                                            {
                                                setState(49);
                                                ((AndLeadingSubformulaContext) _localctx)
                                                                .subformulaOrS =
                                                        subformulaOrS();
                                                ((AndLeadingSubformulaContext) _localctx)
                                                        .furthers.add(
                                                                ((AndLeadingSubformulaContext)
                                                                                _localctx)
                                                                        .subformulaOrS);
                                            }
                                            break;
                                        case NOFORMULA:
                                            {
                                                setState(50);
                                                match(NOFORMULA);
                                            }
                                            break;
                                        default:
                                            throw new NoViableAltException(this);
                                    }
                                }
                            }
                            setState(55);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == AND);
                    }
                    break;
                case 4:
                    _localctx = new AndLeadingNoFormulaContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                    {
                        setState(59);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(57);
                                    match(NOFORMULA);
                                    setState(58);
                                    match(AND);
                                }
                            }
                            setState(61);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == NOFORMULA);
                        setState(63);
                        ((AndLeadingNoFormulaContext) _localctx).firsts = subformulaOrS();
                        setState(71);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == AND) {
                            {
                                {
                                    setState(64);
                                    match(AND);
                                    setState(67);
                                    switch (_input.LA(1)) {
                                        case COMPLEMENT:
                                        case ANYFORMULA:
                                        case READ:
                                        case STAR:
                                        case SQUOTE:
                                        case NEG:
                                        case BOX:
                                        case DIAMOND:
                                        case TRUE:
                                        case FALSE:
                                        case OBRACKET:
                                        case OPAREN:
                                        case ISYMBOL:
                                        case CONTAINS:
                                            {
                                                setState(65);
                                                ((AndLeadingNoFormulaContext) _localctx)
                                                                .subformulaOrS =
                                                        subformulaOrS();
                                                ((AndLeadingNoFormulaContext) _localctx)
                                                        .furthers.add(
                                                                ((AndLeadingNoFormulaContext)
                                                                                _localctx)
                                                                        .subformulaOrS);
                                            }
                                            break;
                                        case NOFORMULA:
                                            {
                                                setState(66);
                                                match(NOFORMULA);
                                            }
                                            break;
                                        default:
                                            throw new NoViableAltException(this);
                                    }
                                }
                            }
                            setState(73);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                    break;
                case 5:
                    _localctx = new OrLeadingSubformulaContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                    {
                        setState(74);
                        ((OrLeadingSubformulaContext) _localctx).firsts = subformulaOrS();
                        setState(80);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(75);
                                    match(OR);
                                    setState(78);
                                    switch (_input.LA(1)) {
                                        case COMPLEMENT:
                                        case ANYFORMULA:
                                        case READ:
                                        case STAR:
                                        case SQUOTE:
                                        case NEG:
                                        case BOX:
                                        case DIAMOND:
                                        case TRUE:
                                        case FALSE:
                                        case OBRACKET:
                                        case OPAREN:
                                        case ISYMBOL:
                                        case CONTAINS:
                                            {
                                                setState(76);
                                                ((OrLeadingSubformulaContext) _localctx)
                                                                .subformulaOrS =
                                                        subformulaOrS();
                                                ((OrLeadingSubformulaContext) _localctx)
                                                        .furthers.add(
                                                                ((OrLeadingSubformulaContext)
                                                                                _localctx)
                                                                        .subformulaOrS);
                                            }
                                            break;
                                        case NOFORMULA:
                                            {
                                                setState(77);
                                                match(NOFORMULA);
                                            }
                                            break;
                                        default:
                                            throw new NoViableAltException(this);
                                    }
                                }
                            }
                            setState(82);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == OR);
                    }
                    break;
                case 6:
                    _localctx = new OrLeadingNoFormulaContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                    {
                        setState(86);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(84);
                                    match(NOFORMULA);
                                    setState(85);
                                    match(OR);
                                }
                            }
                            setState(88);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == NOFORMULA);
                        setState(90);
                        ((OrLeadingNoFormulaContext) _localctx).firsts = subformulaOrS();
                        setState(98);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == OR) {
                            {
                                {
                                    setState(91);
                                    match(OR);
                                    setState(94);
                                    switch (_input.LA(1)) {
                                        case COMPLEMENT:
                                        case ANYFORMULA:
                                        case READ:
                                        case STAR:
                                        case SQUOTE:
                                        case NEG:
                                        case BOX:
                                        case DIAMOND:
                                        case TRUE:
                                        case FALSE:
                                        case OBRACKET:
                                        case OPAREN:
                                        case ISYMBOL:
                                        case CONTAINS:
                                            {
                                                setState(92);
                                                ((OrLeadingNoFormulaContext) _localctx)
                                                                .subformulaOrS =
                                                        subformulaOrS();
                                                ((OrLeadingNoFormulaContext) _localctx)
                                                        .furthers.add(
                                                                ((OrLeadingNoFormulaContext)
                                                                                _localctx)
                                                                        .subformulaOrS);
                                            }
                                            break;
                                        case NOFORMULA:
                                            {
                                                setState(93);
                                                match(NOFORMULA);
                                            }
                                            break;
                                        default:
                                            throw new NoViableAltException(this);
                                    }
                                }
                            }
                            setState(100);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                    break;
                case 7:
                    _localctx = new ImpliesContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                    {
                        setState(101);
                        ((ImpliesContext) _localctx).first = subformula();
                        setState(102);
                        match(IMPLIES);
                        setState(103);
                        ((ImpliesContext) _localctx).second = subformula();
                    }
                    break;
                case 8:
                    _localctx = new EquivContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                    {
                        setState(105);
                        ((EquivContext) _localctx).first = subformula();
                        setState(106);
                        match(EQUIV);
                        setState(107);
                        ((EquivContext) _localctx).second = subformula();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SubformulaOrSContext extends ParserRuleContext {
        public SubformulaeContext subformulae() {
            return getRuleContext(SubformulaeContext.class, 0);
        }

        public SubformulaContext subformula() {
            return getRuleContext(SubformulaContext.class, 0);
        }

        public SubformulaOrSContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_subformulaOrS;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitSubformulaOrS(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SubformulaOrSContext subformulaOrS() throws RecognitionException {
        SubformulaOrSContext _localctx = new SubformulaOrSContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_subformulaOrS);
        try {
            setState(113);
            switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(111);
                        subformula();
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(112);
                        subformulae();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SubformulaContext extends ParserRuleContext {
        public NamedSubformulaContext namedSubformula() {
            return getRuleContext(NamedSubformulaContext.class, 0);
        }

        public PrefixSubformulaContext prefixSubformula() {
            return getRuleContext(PrefixSubformulaContext.class, 0);
        }

        public NamedFormulaContext namedFormula() {
            return getRuleContext(NamedFormulaContext.class, 0);
        }

        public AtomarSubformulaContext atomarSubformula() {
            return getRuleContext(AtomarSubformulaContext.class, 0);
        }

        public SubformulaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_subformula;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitSubformula(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SubformulaContext subformula() throws RecognitionException {
        SubformulaContext _localctx = new SubformulaContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_subformula);
        try {
            setState(119);
            switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(115);
                        namedFormula();
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(116);
                        namedSubformula();
                    }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(117);
                        atomarSubformula();
                    }
                    break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                    {
                        setState(118);
                        prefixSubformula();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SubformulaeContext extends ParserRuleContext {
        public SubformulaeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_subformulae;
        }

        public SubformulaeContext() {}

        public void copyFrom(SubformulaeContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class AnyStarContext extends SubformulaeContext {
        public TerminalNode STAR() {
            return getToken(PatternParser.STAR, 0);
        }

        public AnyStarContext(SubformulaeContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitAnyStar(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class StarContext extends SubformulaeContext {
        public AtomarSubformulaContext sub;

        public TerminalNode AT() {
            return getToken(PatternParser.AT, 0);
        }

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public TerminalNode STAR() {
            return getToken(PatternParser.STAR, 0);
        }

        public AtomarSubformulaContext atomarSubformula() {
            return getRuleContext(AtomarSubformulaContext.class, 0);
        }

        public StarContext(SubformulaeContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitStar(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class NamedStarContext extends SubformulaeContext {
        public NamedSubformulaContext sub;

        public NamedSubformulaContext namedSubformula() {
            return getRuleContext(NamedSubformulaContext.class, 0);
        }

        public TerminalNode STAR() {
            return getToken(PatternParser.STAR, 0);
        }

        public NamedStarContext(SubformulaeContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitNamedStar(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AnyNameStarContext extends SubformulaeContext {
        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public TerminalNode STAR() {
            return getToken(PatternParser.STAR, 0);
        }

        public AnyNameStarContext(SubformulaeContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitAnyNameStar(this);
            else return visitor.visitChildren(this);
        }
    }
